# errorviz

./: Cargo.toml
src/: diagnostics.rs  file.rs  main.rs
