[package]
name = "errorviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cargo_metadata = "0.15.1"
syn = { version = "1.0", features = ["full"] }
# syntax = { path = "/home/wang/dev/rust/rust-analyzer/crates/syntax" }
